avaibility room
